--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Aerial by HTML5 UP</title>
-	<meta charset="utf-8" />
+	<title>Artur's Webpage</title><img src="../../Downloads/icons8-my-computer-16.png" height="16" width="16"/>
+    <meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link rel="icon" type="image/svg+xml" href="assets/css/images/new/icons8-my-computer-16.png">
 </head>
 <body class="is-preload">
 <div id="wrapper">
