--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>Artur's Webpage</title><img src="../../Downloads/icons8-my-computer-16.png" height="16" width="16"/>
+	<title>Artur Kasenõmm</title><img src="../../Downloads/icons8-my-computer-16.png" height="16" width="16"/>
     <meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<meta name="description" content="Artur Kasenõmm – personal webpage.">
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	<link rel="icon" type="image/svg+xml" href="assets/css/images/new/icons8-my-computer-16.png">
