--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	<link rel="icon" type="image/svg+xml" href="assets/css/images/new/icons8-my-computer-16.png">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
 </head>
 <body class="is-preload">
 <div id="wrapper">
@@ -32,9 +33,10 @@
 				<img src="assets/css/images/CVPILT_2_-removebg-preview.png" alt="Profile" class="profile-pic" />
 			</div>
 			<h1>Artur Kasenõmm</h1>
-			<p>Software Engineer</p>
+<!--			<p>Software Engineer</p>-->
 			<div id="introduction">
-				<p>I like to code. If you want to discuss an exciting idea or think I might be the one to help you build your next project, feel free to reach out. I’m always up for a great collaboration!</p>
+<!--				<p>I like to code. If you want to discuss an exciting idea or think I might be the one to help you build your next project, feel free to reach out. I’m always up for a great collaboration!</p>-->
+				<p>I do computer stuff. If you want to discuss an exciting idea or think I might be the one to help you build your next project, feel free to reach out. I’m always up for a great collaboration!</p>
 			</div>
 			<nav>
 				<ul>
